// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ruffGenerator strict output matches snapshot 1`] = `
"# ai-guardrails:sha256=69601edae6db6ada4fc25f48df030cdeff97da9032b75487ec45c56b07f70c24
target-version = "py311"
line-length = 88
indent-width = 2
fix = false
unsafe-fixes = false

[lint]
select = ["ALL"]

ignore = [
  # --- Formatter conflicts (handled by ruff format) ---
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  # --- Redundant with pyright ---
  "ANN",
  # --- Docstrings (opt-in) ---
  "D",
  # --- Development markers ---
  "FIX001",
  "FIX002",
  "TD",
  # --- High false-positive ---
  "CPY001",
  "INP001",
  "EM101",
  "EM102",
  "TRY003",
]

[lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"**/__init__.py" = ["F401"]

[lint.pydocstyle]
convention = "google"

[lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[lint.isort]
force-single-line = false
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
force-to-top = ["__future__"]
required-imports = ["from __future__ import annotations"]

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.flake8-tidy-imports.banned-api]
"typing.Optional".msg = "Use \`X | None\` instead"
"typing.Union".msg   = "Use \`X | Y\` instead"
"typing.List".msg    = "Use \`list[X]\` instead"
"typing.Dict".msg    = "Use \`dict[X, Y]\` instead"
"typing.Set".msg     = "Use \`set[X]\` instead"
"typing.Tuple".msg   = "Use \`tuple[X, ...]\` instead"

[lint.mccabe]
max-complexity = 10

[lint.pylint]
max-args = 5
max-bool-expr = 3
max-branches = 10
max-locals = 10
max-nested-blocks = 3
max-positional-args = 5
max-public-methods = 15
max-returns = 4
max-statements = 30

[lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "csv"
parametrize-values-type = "list"
raises-require-match-for = ["ValueError", "TypeError", "KeyError", "RuntimeError"]

[format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80
"
`;

exports[`ruffGenerator standard output matches snapshot 1`] = `
"# ai-guardrails:sha256=3ebc733600147c5f503166a7219694147a25d83477485aa602a618cc9ba3506d
target-version = "py311"
line-length = 88
indent-width = 2
fix = false
unsafe-fixes = false

[lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "ICN", "PIE", "PT", "RSE", "SIM", "TID"]

ignore = [
  # --- Formatter conflicts (handled by ruff format) ---
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  # --- Redundant with pyright ---
  "ANN",
  # --- Docstrings (opt-in) ---
  "D",
  # --- Development markers ---
  "FIX001",
  "FIX002",
  "TD",
  # --- High false-positive ---
  "ERA001",
  "CPY001",
  "INP001",
  "T201",
  "EM101",
  "EM102",
  "TRY003",
  "S101",
]

[lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"**/__init__.py" = ["F401"]

[lint.pydocstyle]
convention = "google"

[lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[lint.isort]
force-single-line = false
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
force-to-top = ["__future__"]
required-imports = ["from __future__ import annotations"]

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.flake8-tidy-imports.banned-api]
"typing.Optional".msg = "Use \`X | None\` instead"
"typing.Union".msg   = "Use \`X | Y\` instead"
"typing.List".msg    = "Use \`list[X]\` instead"
"typing.Dict".msg    = "Use \`dict[X, Y]\` instead"
"typing.Set".msg     = "Use \`set[X]\` instead"
"typing.Tuple".msg   = "Use \`tuple[X, ...]\` instead"

[lint.mccabe]
max-complexity = 10

[lint.pylint]
max-args = 5
max-bool-expr = 3
max-branches = 10
max-locals = 10
max-nested-blocks = 3
max-positional-args = 5
max-public-methods = 15
max-returns = 4
max-statements = 30

[lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "csv"
parametrize-values-type = "list"
raises-require-match-for = ["ValueError", "TypeError", "KeyError", "RuntimeError"]

[format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80
"
`;

exports[`ruffGenerator minimal output matches snapshot 1`] = `
"# ai-guardrails:sha256=c1a750fbb8cbbdd5c2320de4c04e3cd914b42714e7d4de92a38e149f78883294
target-version = "py311"
line-length = 88
indent-width = 2
fix = false
unsafe-fixes = false

[lint]
select = ["E", "F", "S"]

ignore = [
  # --- Formatter conflicts (handled by ruff format) ---
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  # --- Redundant with pyright ---
  "ANN",
  # --- Docstrings (opt-in) ---
  "D",
  # --- Development markers ---
  "FIX001",
  "FIX002",
  "TD",
  # --- High false-positive ---
  "ERA001",
  "CPY001",
  "INP001",
  "T201",
  "EM101",
  "EM102",
  "TRY003",
  "S101",
]

[lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"**/__init__.py" = ["F401"]

[lint.pydocstyle]
convention = "google"

[lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[lint.isort]
force-single-line = false
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
force-to-top = ["__future__"]
required-imports = ["from __future__ import annotations"]

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.flake8-tidy-imports.banned-api]
"typing.Optional".msg = "Use \`X | None\` instead"
"typing.Union".msg   = "Use \`X | Y\` instead"
"typing.List".msg    = "Use \`list[X]\` instead"
"typing.Dict".msg    = "Use \`dict[X, Y]\` instead"
"typing.Set".msg     = "Use \`set[X]\` instead"
"typing.Tuple".msg   = "Use \`tuple[X, ...]\` instead"

[lint.mccabe]
max-complexity = 10

[lint.pylint]
max-args = 5
max-bool-expr = 3
max-branches = 10
max-locals = 10
max-nested-blocks = 3
max-positional-args = 5
max-public-methods = 15
max-returns = 4
max-statements = 30

[lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "csv"
parametrize-values-type = "list"
raises-require-match-for = ["ValueError", "TypeError", "KeyError", "RuntimeError"]

[format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80
"
`;
